2006-05-20  Alex Roitman  <shura@gramps-project.org>
	* src/gramps_main.py (Gramps.__init__): Call ArgHandler between
	init_interface and post_init_interface.
	* src/ViewManager.py (init_interface): Split off post_init_interface.
	* src/GrampsDb/_ReadGedcom.py: Correct set_type calls.

2006-05-19  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: repository does not have a media_list
	* src/DataViews/_MapView.py: use config value to determine if online
	maps should be used
	* src/GrampsCfg.py: online map config value
	* src/Config/_GrampsConfigKeys.py: online map config value
	* data/gramps.schema.in: online map config value
	* src/Config/gen_schema_keys.py: clean up

2006-05-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py (db_copy): Copy custom types.

2006-05-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py (WMSMapTile): Start of map download inside
	an idle handler.

2006-05-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: Define methods to get custom types.
	* src/GrampsDb/_GrampsBSDDB.py: Load/save marker_types.

2006-05-19  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_SecondaryObject.py: added, provide is_equal
	* src/RelLib/_Url.py: inherit from SecondaryObject
	* src/RelLib/_MediaRef.py: inherit from SecondaryObject
	* src/RelLib/_ChildRef.py: inherit from SecondaryObject
	* src/RelLib/_Name.py: inherit from SecondaryObject
	* src/RelLib/_Address.py: inherit from SecondaryObject
	* src/RelLib/_SourceRef.py: inherit from SecondaryObject
	* src/RelLib/_RepoRef.py: inherit from SecondaryObject
	* src/RelLib/_PersonRef.py: inherit from SecondaryObject
	* src/RelLib/_Attribute.py: inherit from SecondaryObject
	* src/RelLib/_Note.py: inherit from SecondaryObject
	* src/RelLib/_Location.py: inherit from SecondaryObject
	* src/RelLib/_EventRef.py: inherit from SecondaryObject
	* src/RelLib/_Event.py: inherit from SecondaryObject